[TAIL-59] KDR proxy + gateway part I.

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<module>common-lib</module>
 		<module>account-svc</module>
 		<module>account-api</module>
+    <module>kdr</module>
 	</modules>
 
 	<dependencyManagement>
