--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
   account-service:
     build: ./account-svc
     image: kuaidaoresume/account-svc
-    ports: # should covert to reverse proxy @Aaron TODO
-      - "8333:8081"
     environment:
       - SPRING_PROFILES_ACTIVE
       - SERVER_PORT
@@ -18,6 +16,27 @@ services:
     networks:
       - internal_access
       - external_access # db access
+
+  kdr-service:
+    build: ./kdr
+    image: kuaidaoresume/kdr-svc
+    ports:
+      - 80:80
+    environment:
+      - SPRING_PROFILES_ACTIVE
+      - SERVER_PORT
+      - SENTRY_DSN
+      - SIGNING_SECRET
+    depends_on:
+      - account-service
+      #- job-service
+      #- resume-service
+      #- www-service
+      #- whoami-service
+#      - ical-service # commented for demo
+    networks:
+      - internal_access
+      - external_access
 
 networks:
   internal_access:
