--- a/resume-svc/src/main/resources/application-test.yml
+++ b/resume-svc/src/main/resources/application-test.yml
@@ -1,6 +1,13 @@
 spring:
+  profiles:
+    test
   jpa:
     show-sql: true
+    hibernate.ddl-auto: create-drop
+  datasource:
+    url: jdbc:mysql://localhost:3306/resume_test?useUnicode=true&characterEncoding=utf-8
+    username: root
+    password:
 
 management:
   endpoints:
