--- a/resume-svc/src/main/resources/application.yml
+++ b/resume-svc/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/kuaidaoresume_resume?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/resume_test?useUnicode=true&characterEncoding=utf-8&serverTimezone=PST
     username: root
-    password: mysqlroot
+    password:
+    driverClassName: com.mysql.jdbc.Driver
   jpa:
     show-sql: true
+    hibernate.ddl-auto: update
   data:
     rest:
       base-path: /api
