--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,9 @@
 		<module>account-svc</module>
 		<module>account-api</module>
 		<module>resume-svc</module>
-		<module>kdr</module>
+    <module>mail-api</module>
+    <module>mail-svc</module>
+    <module>kdr</module>
 	</modules>
 
 	<dependencyManagement>
