--- a/resume-svc/src/main/resources/application-dev.yml
+++ b/resume-svc/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: dev
   application:
-    name: account-service
+    name: resume-service
   datasource:
     url: ${RESUME_DATASOURCE_URL}
     username: ${RESUME_DATASOURCE_USERNAME}
@@ -15,3 +15,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+kuaidaoresume:
+  common:
+    sentry-dsn: ${SENTRY_DSN}
+    deploy-env: ${DEPLOY:V2}
+  signing-secret: ${SIGNING_SECRET}
