Remove the extra mail service dependancy.

--- a/account-svc/pom.xml
+++ b/account-svc/pom.xml
@@ -52,17 +52,17 @@
             <artifactId>account-api</artifactId>
             <version>1.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.kuaidao</groupId>
-            <artifactId>mail-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <!--
-        <dependency>
-            <groupId>com.kuaidao</groupId>
-            <artifactId>bot-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>-->
+      <!--<dependency>
+          <groupId>com.kuaidao</groupId>
+          <artifactId>mail-api</artifactId>
+          <version>1.0.0</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.kuaidao</groupId>
+          <artifactId>bot-api</artifactId>
+          <version>1.0.0</version>
+      </dependency>-->
     </dependencies>
     <build>
         <plugins>
