--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -22,8 +22,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g yarn # Extra Step
     - name: setup
-      run: cd webapp && yarn
+      run: |
+        cd webapp
+        yarn
     - name: build
-      run: yarn build
+      run: yarn build:prod
     - name: test
       run: yarn test:nowatch
