--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -7,12 +7,12 @@ on:
     branches: [ develop ]
 
 jobs:
-  build:
+  webapp-build-and-test:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [12.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -21,11 +21,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g yarn # Extra Step
-    - name: setup
+    - name: setup, build and test
       run: |
         cd webapp
         yarn
-    - name: build
-      run: yarn build:prod
-    - name: test
-      run: yarn test:nowatch
+        yarn build:prod
+        yarn test:nowatch
