[TAIL-125] Set up flyway (#17)
* [TAIL-125] Set up flyway

 + some schema updates in resume-svc

* Update Experience.java

change `experience`(role) length limit to 50

* add modify `work_experience`(role) column size migration script

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 				<scope>import</scope>
 			</dependency>
 
+			<!-- flyway -->
+			<dependency>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-core</artifactId>
+				<version>6.5.1</version>
+			</dependency>
+
 			<!-- Swagger -->
 			<dependency>
 				<groupId>io.springfox</groupId>
