--- a/resume-svc/src/main/resources/application.yml
+++ b/resume-svc/src/main/resources/application.yml
@@ -1,13 +1,16 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/kuaidaoresume_resume?useUnicode=true&characterEncoding=utf-8
-    #url: jdbc:mysql://kuaidaoresume-resume.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-resume?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/kuaidao_resume?useUnicode=true&characterEncoding=utf-8
     username: root
     password:
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
-    hibernate.ddl-auto: update
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   data:
     rest:
       base-path: /api
