[Tail-75] Basic Job Service + find Job by Location & Major (#13)
* save job
* dedup saving same job
* find job by location and major

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 		<module>common-lib</module>
 		<module>account-svc</module>
 		<module>account-api</module>
+		<module>job-svc</module>
+		<module>job-api</module>
 		<module>resume-svc</module>
     <module>kdr</module>
 	</modules>
