--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.2.2",
+    "react-bootstrap": "^1.3.0",
     "react-bootstrap-typeahead": "^5.1.0",
     "react-dom": "^16.13.1",
+    "react-intersection-observer": "^8.26.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-router-hash-link": "^2.0.0",
+    "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +41,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "husky": "^4.2.5",
     "react-test-renderer": "^16.13.1"
   }
 }
