--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.1.0",
     "bootstrap": "^4.5.0",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-typeahead": "^5.1.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-intersection-observer": "^8.26.2",
     "react-redux": "^7.1.3",
