--- a/account-svc/src/main/resources/application.yml
+++ b/account-svc/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    #url: jdbc:mysql://localhost:3306/kuaidaoresume_account?useUnicode=true&characterEncoding=utf-8
-    #username: root
-    #password: mysqlroot
-    url: jdbc:mysql://kuaidaoresume-account.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-account?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/kuaidaoresume_account?useUnicode=true&characterEncoding=utf-8
     username: root
     password: mysqlroot
+    #url: jdbc:mysql://kuaidaoresume-account.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-account?useUnicode=true&characterEncoding=utf-8
+    #username: root
+    #password: mysqlroot
   jpa:
     show-sql: true
 server:
