--- a/k8s/uat/email-svc.yaml
+++ b/k8s/uat/email-svc.yaml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: account-svc-deployment
+  name: email-svc-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: account-svc
+      app: email-svc
   template:
     metadata:
       labels:
-        app: account-svc
+        app: email-svc
         env: uat
     spec:
       containers:
-        - name: account-svc
-          image: kuaidaoresume/account-svc
+        - name: email-svc
+          image: kuaidaoresume/mail-svc
           #imagePullPolicy: Never
           ports:
             - name: http-port
@@ -35,10 +35,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-service
+  name: email-service
 spec:
   selector:
-    app: account-svc
+    app: email-svc
     env: uat
   ports:
     - protocol: TCP
