--- a/k8s/uat/kdr-svc.yaml
+++ b/k8s/uat/kdr-svc.yaml
@@ -1,22 +1,24 @@
 # https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-apiversion-definition-guide.html
+# https://stackoverflow.com/questions/53775328/kubernetes-port-forwarding-error-listen-tcp4-127-0-0-188-bind-permission-de
 apiVersion: apps/v1
+#sapiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: account-svc-deployment
+  name: kdr-svc-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: account-svc
+      app: kdr-svc
   template:
     metadata:
       labels:
-        app: account-svc
+        app: kdr-svc
         env: uat
     spec:
       containers:
-        - name: account-svc
-          image: kuaidaoresume/account-svc
+        - name: kdr-svc
+          image: kuaidaoresume/kdr-svc
           #imagePullPolicy: Never
           ports:
             - name: http-port
@@ -35,12 +37,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-service
+  name: kdr-service
 spec:
   selector:
-    app: account-svc
+    app: kdr-svc
     env: uat
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
+  type: LoadBalancer
