--- a/k8s/uat/www-web.yaml
+++ b/k8s/uat/www-web.yaml
@@ -2,21 +2,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: account-svc-deployment
+  name: www-web-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: account-svc
+      app: www-svc
   template:
     metadata:
       labels:
-        app: account-svc
+        app: www-svc
         env: uat
+        track: stable
     spec:
       containers:
-        - name: account-svc
-          image: kuaidaoresume/account-svc
+        - name: www-svc
+          image: kuaidaoresume/www-svc
           #imagePullPolicy: Never
           ports:
             - name: http-port
@@ -35,10 +36,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-service
+  name: www-service
 spec:
   selector:
-    app: account-svc
+    app: www-svc
     env: uat
   ports:
     - protocol: TCP
