[TAIL-XXX] Create MVC skeletion for onboarding APPs as user logging (#39)
[TAIL-XXX] Create an MVC skeleton for onboarding APPs as user logging.
- Fix work my machine build issue.

--- a/kdr/src/main/resources/application-dev.yml
+++ b/kdr/src/main/resources/application-dev.yml
@@ -25,6 +25,10 @@ kdr:
       name: superpowers_route
       host: superpowers.kuaidaoresume-v2.local
       destinations: localhost:8085
+    -
+      name: www_route
+      host: www.kuaidaoresume-v2.local
+      destinations: localhost:8086
 
 management:
   endpoints:
