--- a/account-svc/src/main/resources/application-dev.yml
+++ b/account-svc/src/main/resources/application-dev.yml
@@ -1,26 +1,16 @@
-# application.yml
-
 spring:
-  profiles:
-    active: dev
-  application:
-    name: account-service
   datasource:
-    url: ${ACCOUNT_DATASOURCE_URL}
-    username: ${ACCOUNT_DATASOURCE_USERNAME}
-    password: ${ACCOUNT_DATASOURCE_PASSWORD}
-    tomcat:
-      test-while-idle: true
-      validation-query: SELECT 1
+    url: jdbc:mysql://kuaidaoresume-account.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-account?useUnicode=true&characterEncoding=utf-8
+    username: root
+    password: mysqlroot
   jpa:
-    hibernate:
-      ddl-auto: validate
-
+    show-sql: true
+server:
+  port: 8081
 kuaidaoresume:
-  common:
-    sentry-dsn: ${SENTRY_DSN}
-    deploy-env: ${DEPLOY:V2}
-  signing-secret: ${SIGNING_SECRET}
-  #email-service-endpoint: ${EMAIL_SERVICE_ENDPOINT:http://email-service:8080}
-  #bot-service-endpoint: ${BOT_SERVICE_ENDPOINT:http://bot-service:8080}
-  intercom-access-token: ${INTERCOM_ACCESS_TOKEN}
+  email-service-endpoint: http://localhost:8088
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
