--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       - SPRING_PROFILES_ACTIVE
       - SERVER_PORT
       - SIGNING_SECRET
-      #- SENTRY_DSN
+      - SENTRY_DSN
+      - EMAIL_SERVICE_ENDPOINT
       #- BOT_SERVICE_ENDPOINT
       - ACCOUNT_DATASOURCE_URL
       - ACCOUNT_DATASOURCE_USERNAME
@@ -44,6 +45,24 @@ services:
       - internal_access
       - external_access # aws access
 
+  www-service:
+    build: ./onboarding-app
+    image: kuaidaoresume/www-svc
+    environment:
+      - SPRING_PROFILES_ACTIVE
+      - SERVER_PORT
+      - SENTRY_DSN
+      - SIGNING_SECRET
+      - ACCOUNT_SERVICE_ENDPOINT
+      - EMAIL_SERVICE_ENDPOINT
+      - RECAPTCHA_PUBLIC
+      - RECAPTCHA_PRIVATE
+    depends_on:
+      - account-service
+      - email-service
+    networks:
+      - internal_access
+
   kdr-service:
     build: ./kdr
     image: kuaidaoresume/kdr-svc
@@ -57,8 +76,8 @@ services:
     depends_on:
       - account-service
       - resume-service
+      - www-service
       #- job-service
-      #- www-service
       #- whoami-service
 #      - ical-service # commented for demo
     networks:
