--- a/mail-api/pom.xml
+++ b/mail-api/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <artifactId>mail-api</artifactId>
-  <name>Kuaidaoresume-Mail-API</name>
+  <name>Kuaidao-Mail-API</name>
   <version>1.0.0</version>
   <description>Mail API/DTO for sharing between client and server</description>
 
