--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,6 +8,7 @@
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-avatar-edit": "^0.8.3",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-typeahead": "^5.1.0",
     "react-dates": "^21.8.0",
