--- a/resume-svc/src/main/resources/application.yml
+++ b/resume-svc/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   datasource:
-    #url: jdbc:mysql://kuaidaoresume-resume.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-resume?useUnicode=true&characterEncoding=utf-8
-    url: jdbc:mysql://localhost:3306/kuaidao_resume?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://kuaidaoresume-resume.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-resume?useUnicode=true&characterEncoding=utf-8
+#    url: jdbc:mysql://localhost:3306/kuaidao_resume?useUnicode=true&characterEncoding=utf-8&serverTimezone=PST
     username: root
-    password:
+    password: mysqlroot
+#    password:
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
