[TAIL-TBD] Update local k8s yaml and readme. (#46)

--- a/k8s/test/email-svc.yaml
+++ b/k8s/test/email-svc.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: email-svc
-          image: kuaidaoresume/email-svc
+          image: kuaidaoresume/mail-svc
           imagePullPolicy: Never
           ports:
             - name: http-port
