--- a/k8s/test/_whoami-svc.yaml
+++ b/k8s/test/_whoami-svc.yaml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: account-svc-deployment
+  name: whoami-svc-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: account-svc
+      app: whoami-svc
   template:
     metadata:
       labels:
-        app: account-svc
+        app: whoami-svc
         env: test
     spec:
       containers:
-        - name: account-svc
-          image: kuaidaoresume/account-svc
+        - name: whoami-svc
+          image: kuaidaoresume/whoami-svc
           imagePullPolicy: Never
           ports:
             - name: http-port
@@ -28,10 +28,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-service
+  name: whoami-service
 spec:
   selector:
-    app: account-svc
+    app: whoami-svc
     env: test
   ports:
     - protocol: TCP
