--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ACCOUNT_DATASOURCE_URL
       - ACCOUNT_DATASOURCE_USERNAME
       - ACCOUNT_DATASOURCE_PASSWORD
+    depends_on:
+      - email-service
     networks:
       - internal_access
       - external_access # db access
@@ -59,6 +61,19 @@ services:
       - internal_access
       - external_access # aws access
 
+  whoami-service:
+    build: ./whoami-svc
+    image: kuaidaoresume/whoami-svc
+    environment:
+      - SPRING_PROFILES_ACTIVE
+      - SERVER_PORT
+      - SENTRY_DSN
+      - ACCOUNT_SERVICE_ENDPOINT
+    depends_on:
+      - account-service
+    networks:
+      - internal_access
+
   www-service:
     build: ./onboarding-app
     image: kuaidaoresume/www-svc
@@ -91,9 +106,8 @@ services:
       - account-service
       - resume-service
       - www-service
+      - whoami-service
       - job-service
-      #- whoami-service
-#      - ical-service # commented for demo
     networks:
       - internal_access
       - external_access
