--- a/k8s/test/resume-svc.yaml
+++ b/k8s/test/resume-svc.yaml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: job-svc-deployment
+  name: resume-svc-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: job-svc
+      app: resume-svc
   template:
     metadata:
       labels:
-        app: job-svc
+        app: resume-svc
         env: test
     spec:
       containers:
-        - name: job-svc
-          image: kuaidaoresume/job-svc
+        - name: resume-svc
+          image: kuaidaoresume/resume-svc
           imagePullPolicy: Never
           ports:
             - name: http-port
@@ -28,10 +28,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: job-service
+  name: resume-service
 spec:
   selector:
-    app: job-svc
+    app: resume-svc
     env: test
   ports:
     - protocol: TCP
