[TAIL-117] Part I matching services skeleton init. (#49)
1. Rush solution on Matching API services skeleton.
2. Runtime connection issue. (There is no connection so far)
3. @bambambam feel free to add schema script in there and repo works.

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
 		<module>job-svc</module>
 		<module>job-api</module>
 		<module>resume-svc</module>
+		<module>matching-svc</module>
+		<module>matching-api</module>
 		<module>mail-api</module>
 		<module>mail-svc</module>
 		<module>whoami-api</module>
