[TF-71] feat - intergrate resume services to front end (#54)
* feat: update services

* feat - add adaptor to all service

* feat - intergrate in resume services - basics

* feat - intergrate resume services - education

* feat - intergrate resume services - add CORS support

* feat - intergrate resume services - finish the rest

* fix a bug with project.js

Co-authored-by: Melody X <melodypxin@gmail.com>
Co-authored-by: Oscar Zhang <zsyoscar@gmail.com>

--- a/webapp/src/shell/configs/configs-base.json
+++ b/webapp/src/shell/configs/configs-base.json
@@ -1,4 +1,16 @@
 {
   "env": "preprod",
-  "services-accounts-baseUrl": "account.kuaidaoresume-v2.local"
+
+  "services-account-baseUrl": "account.kuaidaoresume-v2.local",
+
+  "services-resume-baseUrl-real": "resume.kuaidaoresume-v2.local",
+  "services-resume-baseUrl": "localhost:8082",
+
+  "services-job-baseUrl": "job.kuaidaoresume-v2.local",
+
+  "services-kdr-baseUrl": "kdr.kuaidaoresume-v2.local",
+
+  "services-mail-baseUrl": "mail.kuaidaoresume-v2.local",
+
+  "services-whoami-baseUrl": "whoami.kuaidaoresume-v2.local"
 }
