--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.1.0",
     "bootstrap": "^4.5.0",
+    "classnames": "^2.2.6",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
