--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,14 @@
     "react-router-hash-link": "^2.0.0",
     "react-scroll": "^1.8.0"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "husky": "^4.2.5",
+    "react-scripts": "3.4.1",
+    "react-test-renderer": "^16.13.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -43,12 +51,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "husky": "^4.2.5",
-    "react-scripts": "3.4.1",
-    "react-test-renderer": "^16.13.1"
+  "husky": {
+    "hooks": {
+      "pre-push": "sh ../hooks/prepush.sh"
+    }
   }
 }
