--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:prod": "NODE_ENV=production react-scripts build",
+    "build:prod": "NODE_ENV=production CI=true react-scripts build",
     "test": "NODE_ENV=test react-scripts test",
     "test:nowatch": "NODE_ENV=test CI=true react-scripts test",
     "eject": "react-scripts eject"
