TAIL-133 Sentry yaml and updates. (#61)
TAIL-133 Sentry yaml and updates

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ ACCOUNT_SERVICE_ENDPOINT=http://account-service
 RESUME_SERVICE_ENDPOINT=http://resume-service
 JOB_SERVICE_ENDPOINT=http://job-service
 #ADD SERVICE ENDPOINT AS YOU NEED
-SENTRY_DSN=https://80aaf4ae889b414f9fe72e3904cd5246@sentry.io/1380198
+SENTRY_DSN=https://270864132b0845e4a9ae4f68f96c77c2@o434398.ingest.sentry.io/5391423
 SIGNING_SECRET=secret
 RECAPTCHA_PUBLIC=test-recaptcha-public
 RECAPTCHA_PRIVATE=test-recaptcha-private
