--- a/matching-svc/pom.xml
+++ b/matching-svc/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>mail-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.kuaidao</groupId>
+            <artifactId>account-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
