--- a/resume-svc/src/main/resources/application.yml
+++ b/resume-svc/src/main/resources/application.yml
@@ -23,3 +23,11 @@ management:
     web:
       exposure:
         include: "*"
+
+kuaidaoresume:
+  common:
+    sentry-dsn: ${SENTRY_DSN:https://270864132b0845e4a9ae4f68f96c77c2@o434398.ingest.sentry.io/5391423}
+    deploy-env: ${DEPLOY:V2}
+  signing-secret: ${SIGNING_SECRET}
+  resume-service-endpoint: ${RESUME_SERVICE_ENDPOINT:http://resume-service:8080}
+  intercom-access-token: ${INTERCOM_ACCESS_TOKEN}
