--- a/job-svc/Dockerfile
+++ b/job-svc/Dockerfile
@@ -2,6 +2,8 @@ FROM java:8-jdk-alpine
 
 COPY ./target/job-svc-1.0.0.jar /usr/app/
 
+COPY ./src/main/resources/matching/keywords.xlsx /usr/app/matching/keywords.xlsx
+
 WORKDIR /usr/app
 
 RUN sh -c 'touch job-svc-1.0.0.jar'
