--- a/job-svc/src/main/resources/application-dev.yml
+++ b/job-svc/src/main/resources/application-dev.yml
@@ -1,26 +1,17 @@
-# application.yml
-
 spring:
-  profiles:
-    active: dev
-  application:
-    name: job-service
   datasource:
-    url: ${job_DATASOURCE_URL}
-    username: ${job_DATASOURCE_USERNAME}
-    password: ${job_DATASOURCE_PASSWORD}
-    tomcat:
-      test-while-idle: true
-      validation-query: SELECT 1
+    url: jdbc:mysql://kuaidaoresume-job.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume_job?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    username: root
+    password: mysqlroot
   jpa:
-    hibernate:
-      ddl-auto: validate
-
-kuaidaoresume:
-  common:
-    sentry-dsn: ${SENTRY_DSN}
-    deploy-env: ${DEPLOY:V2}
-  signing-secret: ${SIGNING_SECRET}
-  #email-service-endpoint: ${EMAIL_SERVICE_ENDPOINT:http://email-service:8080}
-  #bot-service-endpoint: ${BOT_SERVICE_ENDPOINT:http://bot-service:8080}
-  intercom-access-token: ${INTERCOM_ACCESS_TOKEN}
+    show-sql: true
+  data:
+    rest:
+      base-path: /api
+server:
+  port: 8083
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
