--- a/job-svc/src/main/resources/application-test.yml
+++ b/job-svc/src/main/resources/application-test.yml
@@ -1,7 +1,17 @@
 spring:
+  datasource:
+    url: jdbc:mysql://kuaidaoresume-job.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume_job?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    username: root
+    password: mysqlroot
   jpa:
     show-sql: true
-
+  flyway:
+    enabled: false
+  data:
+    rest:
+      base-path: /api
+server:
+  port: 8083
 management:
   endpoints:
     web:
