--- a/job-svc/src/main/resources/application.yml
+++ b/job-svc/src/main/resources/application.yml
@@ -1,17 +1,25 @@
+# application.yml
 spring:
+  profiles:
+    active: dev
+  application:
+    name: job-service
   datasource:
-    url: jdbc:mysql://localhost:3306/kuaidaoresume_job?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
-    username: root
-    password: mysqlroot
+    url: ${job_DATASOURCE_URL}
+    username: ${job_DATASOURCE_USERNAME}
+    password: ${job_DATASOURCE_PASSWORD}
+    tomcat:
+      test-while-idle: true
+      validation-query: SELECT 1
   jpa:
-    show-sql: true
-  data:
-    rest:
-      base-path: /api
-server:
-  port: 8083
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+    hibernate:
+      ddl-auto: validate
+
+kuaidaoresume:
+  common:
+    sentry-dsn: ${SENTRY_DSN:https://80bbf4ae778b525f9fe72e2813cd5246@sentry.io/1271087}
+    deploy-env: ${DEPLOY:V2}
+  signing-secret: ${SIGNING_SECRET}
+  #email-service-endpoint: ${EMAIL_SERVICE_ENDPOINT:http://email-service:8080}
+  #bot-service-endpoint: ${BOT_SERVICE_ENDPOINT:http://bot-service:8080}
+  intercom-access-token: ${INTERCOM_ACCESS_TOKEN}
