--- a/k8s/uat/kdr-svc.yaml
+++ b/k8s/uat/kdr-svc.yaml
@@ -1,10 +1,10 @@
 # https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-apiversion-definition-guide.html
 # https://stackoverflow.com/questions/53775328/kubernetes-port-forwarding-error-listen-tcp4-127-0-0-188-bind-permission-de
 apiVersion: apps/v1
-#sapiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: kdr-svc-deployment
+  #namespace: kuaidaoresume-uat
 spec:
   replicas: 1
   selector:
