--- a/k8s/uat/canary/www-web-canary.yaml
+++ b/k8s/uat/canary/www-web-canary.yaml
@@ -2,23 +2,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: account-svc-deployment
-  #namespace: kuaidaoresume-uat
+  name: www-web-deployment-canary
+  namespace: kuaidaoresume-uat
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: account-svc
+    selector:
+      matchLabels:
+        app: www-svc
   template:
     metadata:
       labels:
-        app: account-svc
+        app: www-svc
         env: uat
+        track: canary
     spec:
       containers:
-        - name: account-svc
-          image: kuaidaoresume/account-svc
-          #imagePullPolicy: Never
+        - name: www-svc
+          image: kuaidaoresume/www-svc:blue
           ports:
             - name: http-port
               containerPort: 80
@@ -32,16 +32,3 @@ spec:
         - name: logback-config-volume
           configMap:
             name: logback-config
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: account-service
-spec:
-  selector:
-    app: account-svc
-    env: uat
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
