--- a/k8s/uat/email-svc.yaml
+++ b/k8s/uat/email-svc.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: email-svc-deployment
+  #namespace: kuaidaoresume-uat
 spec:
   replicas: 1
   selector:
