--- a/k8s/uat/resume-svc.yaml
+++ b/k8s/uat/resume-svc.yaml
@@ -2,44 +2,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: account-svc-deployment
+  name: resume-svc-deployment
   #namespace: kuaidaoresume-uat
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: account-svc
+      app: resume-svc
   template:
     metadata:
       labels:
-        app: account-svc
+        app: resume-svc
         env: uat
     spec:
       containers:
-        - name: account-svc
-          image: kuaidaoresume/account-svc
-          #imagePullPolicy: Never
+        - name: resume-svc
+          image: kuaidaoresume/resume-svc
+          imagePullPolicy: Never
           ports:
             - name: http-port
               containerPort: 80
           envFrom:
             - configMapRef:
                 name: common-config
-          volumeMounts:
-            - name: logback-config-volume
-              mountPath: /etc/kuaidaoresume
-      volumes:
-        - name: logback-config-volume
-          configMap:
-            name: logback-config
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-service
+  name: resume-service
 spec:
   selector:
-    app: account-svc
+    app: resume-svc
     env: uat
   ports:
     - protocol: TCP
