--- a/k8s/uat/www-web.yaml
+++ b/k8s/uat/www-web.yaml
@@ -3,8 +3,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: www-web-deployment
+  #namespace: kuaidaoresume-uat
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: www-svc
