--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,6 +6,9 @@
     "@reduxjs/toolkit": "^1.1.0",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
+    "html2canvas": "^1.0.0-rc.7",
+    "jest-canvas-mock": "^2.2.0",
+    "jspdf": "^2.0.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
