--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,11 +4,18 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.1.0",
+    "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "html2canvas": "^1.0.0-rc.7",
     "jest-canvas-mock": "^2.2.0",
     "jspdf": "^2.0.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^4.1.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -28,10 +35,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "husky": "^4.2.5",
+    "nodemon": "^2.0.4",
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1"
   },
   "scripts": {
+    "serve": "nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:prod": "NODE_ENV=production CI=true react-scripts build",
