--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,7 +10,7 @@
     "classnames": "^2.2.6",
     "html2canvas": "^1.0.0-rc.7",
     "jest-canvas-mock": "^2.2.0",
-    "jspdf": "^2.0.0",
+    "jspdf": "1.5.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -27,8 +27,7 @@
     "react-intersection-observer": "^8.26.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.0.0",
-    "react-scroll": "^1.8.0"
+    "react-router-hash-link": "^2.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
