TF121&83- 我的简历 - UI and integrate with resume service (#92)
* feat - intergrate in resume api into resume hub

* feat - build resume hub

* feat - convert data from service to SmartResume

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/kdr/src/main/resources/application-test.yml
+++ b/kdr/src/main/resources/application-test.yml
@@ -6,4 +6,4 @@ management:
 kdr:
   cors:
     enabled: true
-    webapp_origin: http://app.kuaidaoresume-v2.local/
+    webapp_origin: http://localhost:3000,http://app.kuaidaoresume-v2.local:3000,http://app.kuaidaoresume-v2.local:30001,http://app.kuaidaoresume-v2.local
