[BE][TAIL-143] Matching service (#75)
* [WIP][DO NOT MERGE] Matching implementations1

* [WIP][DO NOT MERGE] add mongotemplate

* [BE][TAIL-143] Matching service - part1
add matching resume to jobs implementations

* fix a bug

* [BE][TAIL-143] Matching service - part2

* minor cleanups

* address CR comments

--- a/matching-svc/src/main/resources/application.yml
+++ b/matching-svc/src/main/resources/application.yml
@@ -4,13 +4,10 @@ spring:
     active: dev
   application:
     name: matching-service
-  datasource:
-    url: ${MATCHING_DATASOURCE_URL}
-    username: ${MATCHING_DATASOURCE_USERNAME}
-    password: ${MATCHING_DATASOURCE_PASSWORD}
-    tomcat:
-      test-while-idle: true
-      validation-query: TBD
+  data:
+    mongodb:
+      uri: ${MATCHING_DATASOURCE_URL:mongodb://localhost:27017}
+      database: kuaidaoresume_matching
 
 kuaidaoresume:
   common:
