--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/translate": "^6.0.2",
     "@reduxjs/toolkit": "^1.1.0",
+    "aws-sdk": "^2.747.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
-    "html2canvas": "^1.0.0-rc.7",
-    "jest-canvas-mock": "^2.2.0",
-    "jspdf": "1.5.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jest-canvas-mock": "^2.2.0",
+    "jspdf": "1.5.3",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -40,6 +43,7 @@
   },
   "scripts": {
     "serve": "nodemon server.js",
+    "serve:dev": "PORT=3000 nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:prod": "NODE_ENV=production CI=true react-scripts build",
