[BE][Tail-156] Do not send to matching if duplicate job (#113)
[BE][Tail-156] Do not send to matching if duplicate job

--- a/job-svc/pom.xml
+++ b/job-svc/pom.xml
@@ -77,7 +77,7 @@
                 <configuration>
                     <url>jdbc:mysql://kuaidaoresume-job.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-job</url>
                     <user>root</user>
-                    <password>mysqlroot</password>
+                    <password>~Youkn0wit)</password>
                 </configuration>
             </plugin>
         </plugins>
