--- a/job-svc/src/main/resources/application-dev.yml
+++ b/job-svc/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://kuaidaoresume-job.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-job?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
     username: root
-    password: mysqlroot
+    password: ~Youkn0wit)
   jpa:
     show-sql: true
   data:
