minor: change matching-svc db name (#129)

--- a/matching-svc/src/main/resources/application.yml
+++ b/matching-svc/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   data:
     mongodb:
       uri: ${MATCHING_DATASOURCE_URL:mongodb+srv://root:mongodbroot@kuaidaoresume-uat1.kxcvj.mongodb.net}
-      database: kuaidaoresume_matching
+      database: kuaidaoresume-matching
 
 kuaidaoresume:
   common:
