TAIL-K8S Add back Always pull for uat. (#128)
Co-authored-by: sliu <sliu@shuangsuangsmbp.lan>

--- a/k8s/uat/app-spa.yaml
+++ b/k8s/uat/app-spa.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: app-spa
           image: kuaidaoresume/app-spa
+          imagePullPolicy: Always
           ports:
             - name: http-port
               containerPort: 80
