--- a/k8s/uat/www-web.yaml
+++ b/k8s/uat/www-web.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: www-svc
           image: kuaidaoresume/www-svc
-          #imagePullPolicy: Never
+          imagePullPolicy: Always
           ports:
             - name: http-port
               containerPort: 80
