--- a/k8s/uat/account-svc.yaml
+++ b/k8s/uat/account-svc.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: account-svc
           image: kuaidaoresume/account-svc
-          #imagePullPolicy: Never
+          imagePullPolicy: Always
           ports:
             - name: http-port
               containerPort: 80
