--- a/k8s/uat/email-svc.yaml
+++ b/k8s/uat/email-svc.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: email-svc
           image: kuaidaoresume/mail-svc
-          #imagePullPolicy: Never
+          imagePullPolicy: Always
           ports:
             - name: http-port
               containerPort: 80
