--- a/kdr/src/main/resources/application.yml
+++ b/kdr/src/main/resources/application.yml
@@ -13,7 +13,7 @@ server:
 
 kuaidaoresume:
   common:
-    sentry-dsn: ${SENTRY_DSN}
+    sentry-dsn: ${SENTRY_DSN:https://270864132b0845e4a9ae4f68f96c77c2@o434398.ingest.sentry.io/5391423}
     deploy-env: ${DEPLOY:V2}
   signing-secret: ${SIGNING_SECRET}
 
