[BE][TAIL-163] matching-svc searching workflow (#118)
* [BE][TAIL-163] matching-svc searching workflow

* revert a config overrode by the auto-merge

--- a/matching-svc/pom.xml
+++ b/matching-svc/pom.xml
@@ -53,6 +53,12 @@
             <version>1.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pemistahl</groupId>
+            <artifactId>lingua</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
