--- a/resume-svc/pom.xml
+++ b/resume-svc/pom.xml
@@ -47,6 +47,7 @@
         <dependency>
             <groupId>com.github.pemistahl</groupId>
             <artifactId>lingua</artifactId>
+            <version>1.0.2</version>
         </dependency>
 
         <dependency>
