--- a/k8s/prod/account-svc.yaml
+++ b/k8s/prod/account-svc.yaml
@@ -1,3 +1,4 @@
+# https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-apiversion-definition-guide.html
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,6 +17,7 @@ spec:
       containers:
         - name: account-svc
           image: kuaidaoresume/account-svc
+          imagePullPolicy: Always
           ports:
             - name: http-port
               containerPort: 80
