--- a/k8s/prod/matching-svc.yaml
+++ b/k8s/prod/matching-svc.yaml
@@ -1,23 +1,22 @@
 # https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-apiversion-definition-guide.html
-# https://stackoverflow.com/questions/53775328/kubernetes-port-forwarding-error-listen-tcp4-127-0-0-188-bind-permission-de
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kdr-svc-deployment
+  name: matching-svc-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: kdr-svc
+      app: matching-svc
   template:
     metadata:
       labels:
-        app: kdr-svc
+        app: matching-svc
         env: prod
     spec:
       containers:
-        - name: kdr-svc
-          image: kuaidaoresume/kdr-svc
+        - name: matching-svc
+          image: kuaidaoresume/matching-svc
           imagePullPolicy: Always
           ports:
             - name: http-port
@@ -36,13 +35,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: kdr-service
+  name: matching-service
 spec:
   selector:
-    app: kdr-svc
+    app: matching-svc
     env: prod
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: LoadBalancer
