--- a/k8s/prod/resume-svc.yaml
+++ b/k8s/prod/resume-svc.yaml
@@ -17,12 +17,20 @@ spec:
       containers:
         - name: resume-svc
           image: kuaidaoresume/resume-svc
+          imagePullPolicy: Always
           ports:
             - name: http-port
               containerPort: 80
           envFrom:
             - configMapRef:
                 name: common-config
+          volumeMounts:
+            - name: logback-config-volume
+              mountPath: /etc/kuaidaoresume
+      volumes:
+        - name: logback-config-volume
+          configMap:
+            name: logback-config
 ---
 apiVersion: v1
 kind: Service
