infra - update build/deploy scripts and update domains (#136)
* infra - update configs for prod domain and uat domain

* infra - update build/deploy scripts

* infra - expose host information

* code review changes

* infra - update urls

* infra - update cors configs

* fix - remove unwanted changes

* code review changes

* infra - update scripts

* code reiview changes

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,6 +140,8 @@ services:
     build:
       context: ./webapp
       dockerfile: Dockerfile
+      args:
+        - REACT_APP_ENV=${REACT_APP_ENV}
     image: kuaidaoresume/app-spa
     networks:
       - internal_access
