--- a/kdr/src/main/resources/application-prod.yml
+++ b/kdr/src/main/resources/application-prod.yml
@@ -1,2 +1,7 @@
+kdr:
+  cors:
+    enabled: true
+    webapp_origin: http://app.smartresume.careers
+
 logging:
   config: /etc/kuaidaoresume/logback-spring.xml
