--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -2,6 +2,11 @@ FROM node:12-alpine as builder
 
 WORKDIR '/usr/app'
 
+ARG REACT_APP_ENV
+ENV REACT_APP_ENV $REACT_APP_ENV
+
+RUN echo "Running on $REACT_APP_ENV
+
 # install dependencies
 COPY package.json ./
 COPY yarn.lock ./
