--- a/webapp/package.json
+++ b/webapp/package.json
@@ -49,8 +49,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:ci": "CI=true react-scripts build",
-    "test": "NODE_ENV=test react-scripts test",
-    "test:nowatch": "NODE_ENV=test CI=true react-scripts test",
+    "test": "REACT_APP_ENV=test react-scripts test",
+    "test:nowatch": "REACT_APP_ENV=test CI=true react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
