--- a/webapp/src/shell/configs/configs-prod.json
+++ b/webapp/src/shell/configs/configs-prod.json
@@ -1,17 +1,17 @@
 {
-  "login-url": "http://www.<prod url>/login",
+  "login-url": "http://www.smartresume.careers/login",
 
-  "services-account-baseUrl": "account.<prod url>",
+  "services-account-baseUrl": "account.smartresume.careers",
 
-  "services-resume-baseUrl": "resume.<prod url>",
+  "services-resume-baseUrl": "resume.smartresume.careers",
 
-  "services-job-baseUrl": "job.<prod url>",
+  "services-job-baseUrl": "job.smartresume.careers",
 
-  "services-kdr-baseUrl": "kdr.<prod url>",
+  "services-kdr-baseUrl": "kdr.smartresume.careers",
 
-  "services-mail-baseUrl": "mail.<prod url>",
+  "services-mail-baseUrl": "mail.smartresume.careers",
 
-  "services-auth-baseUrl": "whoami.<prod url>",
+  "services-auth-baseUrl": "whoami.smartresume.careers",
 
-  "services-app-baseUrl": "app.<prod url>"
+  "services-app-baseUrl": "app.smartresume.careers"
 }
