--- a/webapp/src/shell/configs/configs-uat.json
+++ b/webapp/src/shell/configs/configs-uat.json
@@ -1,17 +1,17 @@
 {
-  "login-url": "http://www.smartresume.careers/login",
+  "login-url": "http://www.uat.smartresume.careers/login",
 
-  "services-account-baseUrl": "account.smartresume.careers",
+  "services-account-baseUrl": "account.uat.smartresume.careers",
 
-  "services-resume-baseUrl": "resume.smartresume.careers",
+  "services-resume-baseUrl": "resume.uat.smartresume.careers",
 
-  "services-job-baseUrl": "job.smartresume.careers",
+  "services-job-baseUrl": "job.uat.smartresume.careers",
 
-  "services-kdr-baseUrl": "kdr.smartresume.careers",
+  "services-kdr-baseUrl": "kdr.uat.smartresume.careers",
 
-  "services-mail-baseUrl": "mail.smartresume.careers",
+  "services-mail-baseUrl": "mail.uat.smartresume.careers",
 
-  "services-auth-baseUrl": "whoami.smartresume.careers",
+  "services-auth-baseUrl": "whoami.uat.smartresume.careers",
 
-  "services-app-baseUrl": "app.smartresume.careers"
+  "services-app-baseUrl": "app.uat.smartresume.careers"
 }
